# libicd-provider-dummy

./: Makefile.am  README.rst  autogen.sh  configure.ac
debian/: changelog  control  copyright  libicd-provider-dummy.install  libicd-provider-dummy.postinst  rules
etc/: Makefile.am  libicd-provider-dummy.schemas
src/: Makefile.am  libicd_provider_dummy.c
